workflow file update

--- a/terraform/redact-pdf/templates/workflow.yaml
+++ b/terraform/redact-pdf/templates/workflow.yaml
@@ -40,8 +40,7 @@ main:
                 body:
                     input_file: $${config.input_file}
                     input_file_bucket: $${config.input_bucket}
-                    buffer_bucket: $${config.buffer_bucket}
-            result: text_filename
+            result: text_data
         - 3. Run DLP on extracted text:
             call: http.post
             args:
@@ -49,11 +48,9 @@ main:
                 auth:
                     type: OIDC
                 body:
-                    input_file: $${text_filename.body}
-                    input_file_bucket: $${config.buffer_bucket}
+                    text_data: $${text_data}
                     dlp_template: $${config.dlp_template}
                     project_id: $${config.project_id}
-                    finding_labels: $${config.finding_labels}
             result: dlp_result
         - 4. Write DLP result to BigQuery:
             call: http.post
