temporary switch off build on push

--- a/.github/workflows/dockerize-pdf-redactor.yaml
+++ b/.github/workflows/dockerize-pdf-redactor.yaml
@@ -7,11 +7,11 @@ on:
                 required: true
                 default: 'latest'
                 type: string
-    push:
-        branches:
-            - master
-        paths:
-            - "src/redactor/**"
+    # push:
+    #     branches:
+    #         - master
+    #     paths:
+    #         - "src/redactor/**"
 jobs:
     build-push:
         runs-on: ubuntu-latest
