--- a/terraform/redact-pdf/templates/workflow.yaml
+++ b/terraform/redact-pdf/templates/workflow.yaml
@@ -70,3 +70,4 @@ main:
                     type: OIDC
                 body:
                     findings: $${dlp_result.body}
+                    project_id: $${config.project_id}
